# SphereMeshApproximation

./: .gitattributes  .gitignore  CMakeLists.txt  CmdParser.cpp  DiffuseShader.cpp  ModelViewer.cpp  ModelViewer.h  README.md  main.cpp  makefile
doc/: SQEM.js  index.html  style.css
src/: BackReferenceList.h  CmdParser.cpp  CmdParser.h  DiffuseShader.cpp  DiffuseShader.h  DynamicMesh.cpp  DynamicMesh.h  ModeSwitcher.h  ModelViewer.cpp  ModelViewer.h  PrioList.h  SQEM.h  SphereMesh.cpp  SphereMesh.h  main.cpp
src/zer0engine/: CMakeLists.txt  zCamera.cpp  zCamera.h  zConfig.h  zFont.cpp  zFramework.cpp  zFramework.h  zList.h  zMath.cpp  zMath.h  zMatrix4.cpp  zMatrix4.h  zMesh.cpp  zMesh.h  zQuaternion.cpp  zRect.cpp  zShader.cpp  zShader.h  zTextView.cpp  zVector2D.cpp  zVector3D.cpp  zVector3D.h  zVector4D.h  zer0engine.cpp  zer0engine.h
tests/: test_prio.cpp
zer0engine/: CMakeLists.txt  zColor.cpp  zColor.h  zConfig.h  zFont.h  zFramework.cpp  zFramework.h  zGlyphMap.cpp  zGlyphMap.h  zList.h  zLogger.cpp  zLogger.h  zMath.h  zMatrix4.cpp  zMesh.cpp  zMesh.h  zQuaternion.h  zRect.h  zShader.cpp  zShader.h  zSingleton.h  zTextView.h  zTexture.cpp  zTexture.h  zVector2D.h  zVector3D.h  zer0engine.h
